# AtlasX

./: .gitignore  README.md  pyproject.toml  requirements.txt
atlasx/: __init__.py
atlasx/annotation/: gene_annotator.py
atlasx/core/: dataset.py  gene.py  genome.py  peak.py
atlasx/database/: chromosome_index.py  gene_database.py  nearby_gene_finder.py
atlasx/io/: __init__.py  bed_reader.py
atlasx/loader/: atac_loader.py
atlasx/scoring/: regulatory_score.py
data/example/: example.bed
tests/: test_bed_reader.py  test_chromosome_index.py  test_gene.py  test_gene_annotator.py  test_gene_database.py  test_genome.py  test_loader.py  test_nearby_gene.py  test_peak.py  test_peak_gene.py  test_peak_parser.py  test_regulatory_score.py
